staging/src/k8s.io/api/testdata/HEAD/admissionregistration.k8s.io.v1beta1.ValidatingWebhookConfiguration.json
{
  "kind": "ValidatingWebhookConfiguration",
  "apiVersion": "admissionregistration.k8s.io/v1beta1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "ą飋īqJ枊a8衍`Ĩɘ.蘯6ċV夸e",
    "resourceVersion": "16964250748386560239",
    "generation": 8071137005907523419,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "clusterName": "15",
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fieldsType": "18",
        "fieldsV2": "Wg=="
      }
    ]
  },
  "webhooks": [
    {
      "name": "19",
      "clientConfig": {
        "url": "20",
        "service": {
          "namespace": "21",
          "name": "22",
          "path": "23",
          "port": 2114329341
        },
        "caBundle": "RA=="
      },
      "rules": [
        {
          "operations": [
            "ʕVŚ(ĿȊ甞谐颋ǅSǡƏS$+½H牗"
          ],
          "apiGroups": [
            "24"
          ],
          "apiVersions": [
            "25"
          ],
          "resources": [
            "26"
          ],
          "scope": "ȎțêɘĲ斬³;Ơ歿"
        }
      ],
      "failurePolicy": "狞夌碕ʂɭ",
      "matchPolicy": "cP$Iņɖ橙9",
      "namespaceSelector": {
        "matchLabels": {
          "MHLU..8._bQw.-dG6c-.6--_x.--0wmZk1_8.3": "U-_Bq.m_4"
        },
        "matchExpressions": [
          {
            "key": "p503---477-49p---o61---4fy--9---7--9-9s-0-u5lj2--10pq-0-7-9-2-0/fP81.-.9Vdx.TB_M-H_5_.t..bG0",
            "operator": "In",
            "values": [
              "D07.a_.y_y_o0_5qN2_---_M.N_._a6.9bHjdH.-.5_.I8__n"
            ]
          }
        ]
      },
      "objectSelector": {
        "matchLabels": {
          "81po6c-m6173y.390q-6-i2d020hj--a-8g--z-nt-b-6-17-58-n---5df19/H.__.h-J-M.9_T.q-o7.y-SQ.9A-F-.4--_vLW.jj-.5B.._.5_3-_4.3i": "i.Fg.Cs_.8-EA"
        },
        "matchExpressions": [
          {
            "key": "4m-s0833--52-9guv59s-3------6tv27r-m8w-6d/5w9-Wm_AO-l8VKLyHA_.-F_E2_QOuQ_8.-1_57__JR.N-1zL-4--6o-B",
            "operator": "DoesNotExist"
          }
        ]
      },
      "sideEffects": "ŴĿ",
      "timeoutSeconds": 1525829664,
      "admissionReviewVersions": [
        "39"
      ]
    }
  ]
}
